labs/03-cicd-pipelines/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-studio
  labels:
    name: devops-studio
    environment: ENVIRONMENT
